--- a/research/ml_algorithms.ipynb
+++ b/research/ml_algorithms.ipynb
@@ -417,10 +417,10 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: scikit-learn in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (0.24.1)\n",
-      "Requirement already satisfied: scipy>=0.19.1 in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (from scikit-learn) (1.6.2)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (from scikit-learn) (2.1.0)\n",
       "Requirement already satisfied: joblib>=0.11 in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (from scikit-learn) (1.0.1)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (from scikit-learn) (2.1.0)\n",
       "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (from scikit-learn) (1.19.5)\n",
+      "Requirement already satisfied: scipy>=0.19.1 in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (from scikit-learn) (1.6.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -465,12 +465,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "b1ffca7e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(x,y, test_size=0.25, random_state=42, shuffle=True)"
+    "X_train, X_test, y_train, y_test = train_test_split(x,y, test_size=0.25, random_state=1234)"
    ]
   },
   {
@@ -567,8 +567,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "b5ec7d8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Gender': 'Male', 'Married': 'Yes', 'Dependents': 0.0, 'Education': 'Graduate', 'Self_Employed': 'No', 'ApplicantIncome': 2500.0, 'CoapplicantIncome': 0.0, 'LoanAmount': 100000, 'Loan_Amount_Term': 360.0, 'Credit_History': 1.0, 'Property_Area': 'Semiurban', 'Loan_Status': 'Y'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_mode = dict(df.mode().iloc[0])\n",
+    "print(train_mode)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "362b0bb2",
    "metadata": {},
    "outputs": [],
    "source": []
