--- a/research/ml_algorithms.ipynb
+++ b/research/ml_algorithms.ipynb
@@ -22,8 +22,10 @@
     "import joblib\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn import svm\n",
     "from sklearn.svm import LinearSVC\n",
-    "from sklearn.ensemble import VotingClassifier\n"
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.calibration import CalibratedClassifierCV\n"
    ]
   },
   {
@@ -409,29 +411,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "abcd1202",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: scikit-learn in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (0.24.1)\n",
-      "Requirement already satisfied: joblib>=0.11 in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (from scikit-learn) (1.0.1)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (from scikit-learn) (2.1.0)\n",
-      "Requirement already satisfied: numpy>=1.13.3 in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (from scikit-learn) (1.19.5)\n",
-      "Requirement already satisfied: scipy>=0.19.1 in c:\\users\\veron\\pycharmprojects\\djangoproject\\venv\\lib\\site-packages (from scikit-learn) (1.6.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "pip install --upgrade scikit-learn"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "a453c423",
    "metadata": {},
    "outputs": [],
@@ -444,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "03b4b5ee",
    "metadata": {},
    "outputs": [
@@ -454,7 +433,7 @@
        "Counter({0: 332, 1: 332})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "b1ffca7e",
    "metadata": {},
    "outputs": [],
@@ -475,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "d4c79fc5",
    "metadata": {},
    "outputs": [],
@@ -486,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "d00e130a",
    "metadata": {},
    "outputs": [],
@@ -497,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "4b645a73",
    "metadata": {},
    "outputs": [],
@@ -508,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "42f5d7bc",
    "metadata": {},
    "outputs": [],
@@ -519,29 +498,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "50af4355",
    "metadata": {},
    "outputs": [],
    "source": [
-    "svm=LinearSVC(C=0.0001)\n",
-    "svm = svm.fit(X_train, y_train)"
+    "svc= svm.SVC(kernel='linear',probability=True)\n",
+    "svc = svc.fit(X_train,y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ce0bf4d7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "evc=VotingClassifier(estimators=[('mnb', mnb),('lr', lr),('rf', rf),('svm', svm)],voting='hard')\n",
+    "evc=VotingClassifier(estimators=[('mnb', mnb),('lr', lr),('rf', rf),('et', et)],voting='hard')\n",
     "evc = evc.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "8fae43ad",
    "metadata": {},
    "outputs": [
@@ -551,7 +530,7 @@
        "['./voting_classifier.joblib']"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,13 +540,13 @@
     "joblib.dump(et, \"./extra_trees.joblib\", compress=True)\n",
     "joblib.dump(mnb, \"./naive_bayes.joblib\", compress=True)\n",
     "joblib.dump(lr, \"./logistic_regression.joblib\", compress=True)\n",
-    "joblib.dump(svm, \"./support_vector_machine.joblib\", compress=True)\n",
+    "joblib.dump(svc, \"./support_vector_machine.joblib\", compress=True)\n",
     "joblib.dump(evc, \"./voting_classifier.joblib\", compress=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "b5ec7d8b",
    "metadata": {},
    "outputs": [
